--- a/css/main.css
+++ b/css/main.css
@@ -1,99 +1,253 @@
 * {
     box-sizing: border-box;
+    padding: 0;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(228, 228, 248);
-    margin: 0;
-    /* height: 100vh; */
-    /* overflow-x: hidden; */
+/*mobile*/
+@media screen and (min-width: 100px) {
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: rgb(228, 228, 248);
+        margin: 0;
+        position: relative;
+    }
+
+    header {
+        grid-template-columns: 200px 2fr 200px;
+        height: 80px;
+        margin-block-end: 25px;
+    }
+
+    nav {
+        background: rgb(20, 72, 139);
+        grid-column: 2/3;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: rgb(21, 23, 37);
+        width: 100%;
+        background-size: cover;
+    }
+
+    .logo-anchor {
+        padding-inline-start: 1em;
+        color: rgb(243, 187, 187);
+        font-size: 2rem;
+    }
+
+
+    nav ul li a {
+        margin: 15px;
+        font-size: 20px;
+        color: white;
+    }
+
+    .gallery-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 1em;
+        padding-left: 20px;
+        padding-right: 30px;
+    }
+
+    .grid-item {
+        margin: 0.5em;
+        cursor: pointer;
+        border-radius: 15px;
+    }
+
+    img {
+        width: 12em;
+    }
+
+    .container {
+        width: 100%;
+    }
+
+    .nav-menu {
+        justify-content: space-between;
+        align-items: center;
+        gap: 0;
+        /* position: fixed; */
+        left: -100%;
+        top: 70px;
+        flex-direction: column;
+        text-align: center;
+        transition: 0.3s;
+    }
+
+    .hamburger {
+        display: block;
+        position: absolute;
+        right: 0px;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 5px 0;
+        transition: all 0.3s ease;
+        background-color: black;
+    }
+
+    ul {
+        list-style: none;
+    }
+
 }
 
-.logo-anchor{
-    padding-inline-start:1em;
-    color: white;
-}
+@media screen and (min-width: 500px) {
+    body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: rgb(228, 228, 248);
+        margin: 0;
+        /* height: 100vh; */
+        /* overflow-x: hidden; */
+    }
 
-header {
-    grid-template-columns: 200px 2fr 200px;
-    height: 80px;
-    margin-block-end: 25px;
-}
+    .logo-anchor {
+        padding-inline-start: 1em;
+        color: rgb(243, 187, 187);
+    }
 
-.main-layout {
-    display: grid;
-}
+    header {
+        grid-template-columns: 200px 2fr 200px;
+        height: 80px;
+        margin-block-end: 15px;
+    }
 
-/* li {
-    display: inline-block;
-} */
+    .main-nav {
+        background: rgb(20, 72, 139);
+        grid-column: 2/3;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        color: rgb(21, 23, 37);
+        width: 100%;
+        background-size: cover;
+    }
+
+    ul {
+        list-style: none;
+    }
+
+    nav ul li a {
+        font-size: 20px;
+        color: rgb(243, 187, 187);
+    }
+
+    .editor-container {
+        margin-top: 50px;
+        /* display: flex; */
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        border-radius: 1em;
+    }
+
+    .search-bar {
+        padding-left: 30px;
+    }
+
+    .search-meme {
+        border-radius: 10px;
+        height: 30px;
+        width: 30em;
+    }
+
+    .random-meme-container {
+        cursor: pointer;
+        justify-content: center;
+        border-radius: 10px;
+        height: 25px;
+        width: 10em;
+        margin-left:28px;
+        margin-top: 25px;
+        display: flex;
+        align-items: center;
+        background:rgb(20, 72, 139);
+        border: 0;
+        border-radius: 8px;
+        box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        font-family: Phantomsans, sans-serif;
+        font-size: 20px;
+        line-height: 1em;
+        padding: 19px 24px;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+    }
 
 
+    .gallery-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 1em;
+        padding-left: 20px;
+        padding-right: 30px;
+    }
 
-nav {
-    background: rgb(20, 72, 139);
-    grid-column: 2/3;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: rgb(21, 23, 37);
-    width: 100%;
-    background-size: cover;
-}
+    .grid-item {
+        margin: 0.4em;
+        cursor: pointer;
+        border-radius: 15px;
+        display: flex;
+    }
 
-ul {
-    display: flex;
-    list-style: none;
-}
+    .grid-item:hover {
+        opacity: 0.5;
+    }
 
-nav ul li a {
-    margin: 15px;
-    font: inherit;
-    font-size: 20px;
-    font-family: inherit;
-    color: white;
-}
+    img {
+        /* width: 100%; */
+        width: 13em;
+    }
 
-.editor-container {
-    margin-top: 50px;
-    /* display: flex; */
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 1em;
-}
+    .nav-menu {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 10px;
+        flex-direction: row;
+    }
 
-.search-bar {
-    padding-left: 30px;
-}
+    .hamburger {
+        display: none;
+        cursor: pointer;
+    }
 
-.search-meme {
-    border-radius: 10px;
-    height: 30px;
-    width: 30em;
-}
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 5px 0;
+        transition: all 0.3s ease;
+        background-color: black;
+    }
 
-.gallery-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1em;
-    padding-left: 20px;
-    padding-right: 30px;
-}
+    .container {
+        /* width:1600px; */
+        margin: auto;
+    }
 
-.grid-item {
-    margin: 0.5em;
-    cursor: pointer;
-    border-radius: 15px;
-}
-
-.grid-item:hover{
-    opacity:0.5;
-}
-
-img {
-    /* width: 100%; */
-    width: 12em;
-    background-color: yellow;
+    .saved-item{
+        margin:10px 10px;
+    }
 }
