--- a/css/main.css
+++ b/css/main.css
@@ -250,4 +250,38 @@
     .saved-item{
         margin:10px 10px;
     }
+
+    .keywords-map {
+        background-color: #f3f3f5;
+        cursor: pointer;
+        font-size: 1em;
+    }
+
+    .keyword-click{
+        cursor: pointer;
+        justify-content: center;
+        border-radius: 10px;
+        height: 25px;
+        width: 10em;
+        margin-left:2px;
+        margin-top: 2px;
+        /* display: flex; */
+        align-items: center;
+        background:rgb(178, 182, 119);
+        border: 0;
+        border-radius: 8px;
+        /* box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px; */
+        /* box-sizing: border-box; */
+        color: #FFFFFF;
+        font-family: Phantomsans, sans-serif;
+        font-size: 12px;
+        line-height: 0.3em;
+        padding: 10px 15px;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+    }
+
 }
