--- a/css/main.css
+++ b/css/main.css
@@ -318,7 +318,7 @@
         white-space: nowrap;
     }
 
-    .save-meme{
+    .save-download-meme{
         cursor: pointer;
         justify-content: center;
         height: 25px;
@@ -334,7 +334,7 @@
         /* box-sizing: border-box; */
         color: black;
         font-family: Phantomsans, sans-serif;
-        font-size: 20px;
+        font-size: 12px;
         line-height: 0.3em;
         padding: 4px 8px;
         text-decoration: none;
