--- a/css/main.css
+++ b/css/main.css
@@ -247,10 +247,6 @@
         margin: auto;
     }
 
-    .saved-item {
-        margin: 10px 10px;
-    }
-
     .keywords-map {
         background-color: #f3f3f5;
         cursor: pointer;
@@ -318,29 +314,17 @@
         white-space: nowrap;
     }
 
-    .save-download-meme{
-        cursor: pointer;
-        justify-content: center;
-        height: 25px;
-        width: fit-content;
-        margin-left: 2px;
-        margin-top: 2px;
-        /* display: flex; */
-        align-items: center;
-        background: rgb(224, 190, 241);
-        border: 0;
-        border-radius: 3px;
-        /* box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px; */
-        /* box-sizing: border-box; */
-        color: black;
-        font-family: Phantomsans, sans-serif;
-        font-size: 12px;
-        line-height: 0.3em;
-        padding: 4px 8px;
-        text-decoration: none;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-        white-space: nowrap;
+    .saved-memes-container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 200px);
+        gap:15px 10px;
     }
+
+    .saved-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
 }
