--- a/css/main.css
+++ b/css/main.css
@@ -33,13 +33,14 @@
         padding-inline-start: 1em;
         color: rgb(243, 187, 187);
         font-size: 2rem;
+        margin-left: 1em;
     }
 
 
     nav ul li a {
         margin: 15px;
         font-size: 20px;
-        color: white;
+        color: rgb(243, 187, 187);
     }
 
     .gallery-container {
@@ -58,10 +59,6 @@
 
     img {
         width: 12em;
-    }
-
-    .container {
-        width: 100%;
     }
 
     .nav-menu {
@@ -94,22 +91,120 @@
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    .bar {
-        display: block;
-        width: 25px;
-        height: 3px;
-        margin: 5px 0;
-        transition: all 0.3s ease;
-        background-color: black;
-    }
-
     ul {
         list-style: none;
     }
 
+    .container {
+        overflow: hidden;
+        position: relative;
+        background-color: black;
+    }
+
+    /* Hide the links inside the navigation menu (except for logo) */
+    #myLinks {
+        display: none;
+    }
+
+    /* Style navigation menu links */
+    .container a {
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+        display: block;
+        color: rgb(243, 187, 187);
+    }
+
+    /* Style the hamburger menu */
+    .container a.icon {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        color: black;
+    }
+
+    /* Add a grey background color on mouse-over */
+    .container a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+
+    /* Style the active link (or home/logo) */
+    /* .active {
+        background-color: #04AA6D;
+        color: white;
+      } */
+
+    .nav-item a {
+        display: none;
+    }
+
+
+    .keyword-click {
+        cursor: pointer;
+        justify-content: center;
+        border-radius: 10px;
+        height: 1.5em;
+        width: 10em;
+        margin-left: 2px;
+        margin-top: 2px;
+        align-items: center;
+        background: rgb(178, 182, 119);
+        border: 0;
+        border-radius: 8px;
+        color: #FFFFFF;
+        font-family: Phantomsans, sans-serif;
+        font-size: 12px;
+        line-height: 0.3em;
+        padding: 10px 15px;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+    }
+
+    .random-meme-btn {
+        cursor: pointer;
+        justify-content: center;
+        border-radius: 10px;
+        height: 25px;
+        width: 12.5em;
+        margin-left: 28px;
+        margin-top: 25px;
+        display: flex;
+        align-items: center;
+        background: rgb(20, 72, 139);
+        border: 0;
+        border-radius: 8px;
+        box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        font-family: Phantomsans, sans-serif;
+        font-size: 1.5vh;
+        line-height: 1em;
+        padding: 19px 24px;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        white-space: nowrap;
+    }
+
+    .search-meme {
+        border-radius: 10px;
+        height: 30px;
+        width: 50vw;
+    }
+
+    .search-bar {
+        margin-top: 3vh;
+        padding-left: 30px;
+    }
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 595px) {
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: rgb(228, 228, 248);
@@ -121,6 +216,7 @@
     .logo-anchor {
         padding-inline-start: 1em;
         color: rgb(243, 187, 187);
+        font-size: 19em;
     }
 
     header {
@@ -138,15 +234,25 @@
         color: rgb(21, 23, 37);
         width: 100%;
         background-size: cover;
+        height: 9vh;
+        margin-bottom: 10px;
     }
 
     ul {
         list-style: none;
     }
 
-    nav ul li a {
-        font-size: 20px;
+    .container nav ul li a {
+        font-size: 1em;
         color: rgb(243, 187, 187);
+    }
+
+    .container nav h2 a {
+        color: rgb(243, 187, 187);
+        padding: 1vw 16px;
+        text-decoration: none;
+        font-size: 0.9em;
+        display: block;
     }
 
     .editor-container {
@@ -165,7 +271,7 @@
     .search-meme {
         border-radius: 10px;
         height: 30px;
-        width: 30em;
+        width: 25em;
     }
 
     .random-meme-btn {
@@ -173,7 +279,7 @@
         justify-content: center;
         border-radius: 10px;
         height: 25px;
-        width: 10em;
+        width: 10.41em;
         margin-left: 28px;
         margin-top: 25px;
         display: flex;
@@ -233,18 +339,23 @@
         cursor: pointer;
     }
 
-    .bar {
+    /* .bar {
         display: block;
         width: 25px;
         height: 3px;
         margin: 5px 0;
         transition: all 0.3s ease;
         background-color: black;
-    }
+    } */
 
     .container {
         /* width:1600px; */
-        margin: auto;
+        margin-bottom: auto;
+        padding-bottom: 0px;
+        overflow: hidden;
+        /* position: relative; */
+        background-color: rgb(228, 228, 248);
+
     }
 
     .keywords-map {
@@ -344,6 +455,18 @@
 
     .user-msg.open {
         bottom: 10px;
+    }
+
+    .fa.fa-bars.hamburg {
+        display: none;
+    }
+
+    .nav-item a {
+        display: inline;
+    }
+
+    .container .myLink{
+        display: none;
     }
 
 }
