--- a/css/main.css
+++ b/css/main.css
@@ -315,10 +315,15 @@
         cursor: pointer;
         border-radius: 15px;
         display: flex;
+        -webkit-filter: sepia(0%);
+        filter: sepia(0%);
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
     }
 
     .grid-item:hover {
-        opacity: 0.5;
+        -webkit-filter: sepia(100%);
+        filter: sepia(100%);
     }
 
     img {
@@ -436,12 +441,21 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        -webkit-filter: sepia(0%);
+        filter: sepia(0%);
+        -webkit-transition: .3s ease-in-out;
+        transition: .3s ease-in-out;
+    }
+
+    .saved-item:hover {
+        cursor: pointer;
+        -webkit-filter: sepia(100%);
+        filter: sepia(100%);
     }
 
     .about-container>p {
         font-size: 20px;
         text-shadow: #FC0 1px 0 10px;
-
     }
 
     .user-msg {
@@ -465,7 +479,7 @@
         display: inline;
     }
 
-    .container .myLink{
+    .container .myLink {
         display: none;
     }
 
